--- a/css/style_02.css
+++ b/css/style_02.css
@@ -58,7 +58,9 @@ header
 }
 section.entry
 {
+	position: relative;
 	background-color: white;
+	z-index: -5;
 }
 section.entry div.container-fluid div.image div
 {
@@ -84,7 +86,7 @@ ul.my-pager
 	position: relative;
 	margin-top: 15px;
 	margin-bottom: 0px;
-	z-index: 1;
+	z-index: 10;
 }
 ul.my-pager li:not(.disabled) a
 {
@@ -103,7 +105,7 @@ div.nav-pager
 div.date-header
 {
 	position: relative;
-	z-index: -1;
+	z-index: -10;
 }
 
 
